# Tax-filing-assistant

./: .gitignore  README.html  README.md  run-dev.sh  streamlit_app.py
backend/: .env.example  pyproject.toml
backend/app/: main.py  settings.py
backend/app/agent/: checkpointer.py  graph.py  llm.py  nodes.py  prompts.py  state.py  stub_llm.py
backend/app/data/: brackets_2025.json  irs_rules_2025.json
backend/app/ingest/: pipeline.py  w2_extractor.py
backend/app/persistence/: db.py  models.py
backend/app/schemas/: __init__.py  deductions.py  documents.py  enums.py  money.py  return_.py  rules.py  tool_io.py
backend/app/tools/: _data_loader.py  calculations.py  clarify.py  document_store.py  forms.py  registry.py  rules.py  w2.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/return/[id]/: page.tsx
frontend/components/: ChatPane.tsx  Form1040Preview.tsx  ToolCallTimeline.tsx  UploadDropzone.tsx
frontend/lib/: api.ts
tests/: test_calculations.py  test_forms.py  test_graph.py  test_ingest.py  test_money.py  test_rules.py  test_session_resume.py
